Gencode/Test/Invalide/test_tas.deca
// Description:
//    test de débordement de tas
//
// Resultats:
//    débordement du tas à l'exécution
//
// Historique:
//    cree le 20/01/2012

class Test {
	int a;
	int b;
	int c;
	int d;
	int e;
	int f;
	int g;
	int h;
	int i;
	int j;
	int k;
	int l;
	int m;
	int n;
	int o;
	int p;
	int q;
	int r;
	int s;
	int t;
	int u;
	int v;
	int w;
	int x;
	int y;
	int z;
}

{
	while (true) {
		new Test();
	}
}
